objects/PatientPhoneNumber__c.object
<CustomObject>
    <fields>
        <fullName>Default_Phone_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Phone Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>PatientPhoneNumbers</relationshipLabel>
        <relationshipName>PatientPhoneNumbers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PhoneType__c</fullName>
        <label>Phone Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>phone_number__c</fullName>
        <label>phone number</label>
        <type>Phone</type>
    </fields>
    <label>PatientPhoneNumber</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>phone-{00000000}</displayFormat>
        <label>PatientPhoneNumber Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PatientPhoneNumbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>